[package]
name = "rt-autotune"
version = "0.1.0"
edition = "2024"

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug" }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug" }  # voor GUI
rustfft = "6"           # FFT voor phase vocoder
pitch_detection = "0.4" # YIN/McLeod pitchdetectie

[lib]
crate-type = ["cdylib"]