[package]
name = "rt-autotune"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "rt-autotune-standalone"
path = "src/main.rs"
required-features = ["standalone"]

[features]
default = []
standalone = ["nih_plug/standalone"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug" }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug" }
rustfft = "6"

[workspace]
members = ["xtask"]
